--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -763,6 +763,14 @@ footer img {
 	padding-bottom: 15px;
 	border-bottom: 1px solid #014997;
 }
+.contenido-curso h4{
+	color: #014997;
+	font-size: 1rem;
+	margin-bottom: 15px;
+	font-weight: 600;
+	padding-bottom: 15px;
+	border-bottom: 1px solid #014997;
+}
 .contenido-curso a{
 	color: #014997;
 	
